--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,18 +5,7 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
-    {% if site.author.display_name or page.author %}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">
-        {% if page.author %}
-            {{ page.author }}
-        {% else %} 
-            {% if site.author.display_name %}
-                {{ site.author.display_name }}
-            {% endif %}
-        {% endif %}
-        </span></span>
-    {% endif %}</p>
+    <p class="post-meta">{% include post-meta.md %}</p>
   </header>
 
   <div class="post-content" itemprop="articleBody">
