--- a/css/main.scss
+++ b/css/main.scss
@@ -8,8 +8,8 @@
 // Our variables
 $base-font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif; //https://medium.com/designing-medium/system-shock-6b1dc6d6596f#.egotfzedd
 $heading-font-family: 'Open Sans', $base-font-family;
-$body-font-family: 'Open Sans', sans-serif;
-$base-font-size:   19px;
+$body-font-family: 'Lustria', serif;
+$base-font-size:   10px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
