--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@
 
 // Our variables
 $base-font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif; //https://medium.com/designing-medium/system-shock-6b1dc6d6596f#.egotfzedd
-$heading-font-family: 'Open Sans', $base-font-family;
+$heading-font-family: 'Lustria', $base-font-family;
 $body-font-family: 'Lustria', serif;
 $base-font-size:   19px;
 $base-font-weight: 400;
