--- a/_sass/_colours.scss
+++ b/_sass/_colours.scss
@@ -8,3 +8,7 @@ $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 $code-background: #eef;
+
+$alex-color:  #009688;
+$annisa-color:#4CAF50;
+$tiara-color: #FF9800;
