--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <p class="post-meta">{% include post-meta.md %}</p>
+    <p class="post-meta">{% include post-meta.md context=page%}</p>
   </header>
 
   <div class="post-content" itemprop="articleBody">
