Added new post (Alex and Anniza)

--- a/css/main.scss
+++ b/css/main.scss
@@ -55,5 +55,6 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting",
         "footnotes",
-        "article"
+        "article",
+        "image-format"
 ;
