--- a/_sass/_image-format.scss
+++ b/_sass/_image-format.scss
@@ -12,6 +12,16 @@
 	float: left;
 }
 
+.image-square-grid-box-one-third{
+	@include span-columns(4);
+	float: left;
+}
+
+.image-square-grid-box-two-third{
+	@include span-columns(8);
+	float: left;
+}
+
 
 @media screen and (max-width: 700px){
 
