make links blue

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -73,7 +73,7 @@ h1, h2, h3, h4, h5, h6 {
 
 //Links
 a {
-  color: $brand-color;
+  color: rgb(0,0,255);
   text-decoration: none;
 
   &:visited {
