Add colour for aiden and ben

--- a/_sass/_colours.scss
+++ b/_sass/_colours.scss
@@ -12,3 +12,5 @@ $code-background: #eef;
 $alex-color:  #082567;
 $annisa-color:#4CAF50;
 $tiara-color: #FF9800;
+$aiden-color: #4cafa6;
+$ben-color:   #faa;
