colour for aiden and ben

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -192,6 +192,8 @@
     &.alex   {border-top-color: $alex-color;}
     &.annisa {border-top-color: $annisa-color;}
     &.tiara  {border-top-color: $tiara-color;}
+    &.aiden  {border-top-color: $aiden-color;}
+    &.ben    {border-top-color: $ben-color;}
 
     .meta {
       font-family: $heading-font-family;
